Items in AUTO_HIDE_SHOWN shelf should can be dragged after context menu is shown.

Changes in this cl:
- Make sure ShelfLayoutManager doesn't handle the following gesture events after
  ET_GESTURE_SCROLL_BEGIN for auto_hide shelf. Then they can still be propagated
  to ShelfButton to process the drag and drop.

- Start the gesture drag and ink drop timer of the shelf item only if the shelf
  is visible. Then gesture drag on the item in AUTO_HIDE_HIDDEN shelf will not
  activate the ink drop of the shelf item.

- Update the shelf visibility in ShelfView::OnMenuClosed only if there is no
  shelf item in drag. Since shelf should be kept as visible during drag even the
  menu is closed.

Bug: 905847
Change-Id: I384b4c4b3bc2d240820cea338c4ddc59d8cc517a
Reviewed-on: https://chromium-review.googlesource.com/c/1340952
Commit-Queue: Min Chen <minch@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609842}
Former-commit-id: 8292d61079c7dc199a149450701bf63cf6274041