ash/shelf/shelf_button.cc
@@ -605,16 +605,20 @@ void ShelfButton::ChildPreferredSizeChanged(views::View* child) {
 void ShelfButton::OnGestureEvent(ui::GestureEvent* event) {
   switch (event->type()) {
     case ui::ET_GESTURE_TAP_DOWN:
-      AddState(STATE_HOVERED);
-      drag_timer_.Start(
-          FROM_HERE, base::TimeDelta::FromMilliseconds(kDragTimeThresholdMs),
-          base::Bind(&ShelfButton::OnTouchDragTimer, base::Unretained(this)));
-      ripple_activation_timer_.Start(
-          FROM_HERE,
-          base::TimeDelta::FromMilliseconds(kInkDropRippleActivationTimeMs),
-          base::Bind(&ShelfButton::OnRippleTimer, base::Unretained(this)));
-      GetInkDrop()->AnimateToState(views::InkDropState::ACTION_PENDING);
-      event->SetHandled();
+      if (shelf_view_->shelf()->IsVisible()) {
+        AddState(STATE_HOVERED);
+        drag_timer_.Start(
+            FROM_HERE, base::TimeDelta::FromMilliseconds(kDragTimeThresholdMs),
+            base::BindRepeating(&ShelfButton::OnTouchDragTimer,
+                                base::Unretained(this)));
+        ripple_activation_timer_.Start(
+            FROM_HERE,
+            base::TimeDelta::FromMilliseconds(kInkDropRippleActivationTimeMs),
+            base::BindRepeating(&ShelfButton::OnRippleTimer,
+                                base::Unretained(this)));
+        GetInkDrop()->AnimateToState(views::InkDropState::ACTION_PENDING);
+        event->SetHandled();
+      }
       break;
     case ui::ET_GESTURE_END:
       drag_timer_.Stop();
